# Spot_Manipulator_Optimization

./: README.md
install/: local_setup.sh  setup.sh
install/moveit_common/share/moveit_common/: package.sh
install/moveit_configs_utils/share/moveit_configs_utils/: package.sh
install/moveit_core/include/moveit/: version.h
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.3.4  libmoveit_background_processing.so.2.3.4  libmoveit_butterworth_filter.so.2.3.4  libmoveit_collision_detection.so.2.3.4  libmoveit_collision_detection_bullet.so.2.3.4  libmoveit_collision_detection_fcl.so.2.3.4  libmoveit_collision_distance_field.so.2.3.4  libmoveit_constraint_samplers.so.2.3.4  libmoveit_distance_field.so.2.3.4  libmoveit_dynamics_solver.so.2.3.4  libmoveit_exceptions.so.2.3.4  libmoveit_kinematic_constraints.so.2.3.4  libmoveit_kinematics_metrics.so.2.3.4  libmoveit_planning_interface.so.2.3.4  libmoveit_planning_request_adapter.so.2.3.4  libmoveit_planning_scene.so.2.3.4  libmoveit_profiler.so.2.3.4  libmoveit_robot_model.so.2.3.4  libmoveit_robot_state.so.2.3.4  libmoveit_robot_trajectory.so.2.3.4  libmoveit_smoothing_base.so.2.3.4  libmoveit_test_utils.so.2.3.4  libmoveit_trajectory_processing.so.2.3.4  libmoveit_transforms.so.2.3.4  libmoveit_utils.so.2.3.4
install/moveit_core/share/moveit_core/: local_setup.sh  package.sh
install/moveit_core/share/moveit_core/cmake/: export_moveit_coreExport-release.cmake  export_moveit_coreExport.cmake  moveit_coreConfig.cmake
install/moveit_plugins/share/moveit_plugins/: local_setup.sh  package.sh
install/moveit_resources_prbt_support/share/moveit_resources_prbt_support/: package.sh
install/moveit_ros_control_interface/share/moveit_ros_control_interface/: package.bash  package.zsh
install/moveit_simple_controller_manager/lib/: libmoveit_simple_controller_manager.so.2.3.4
install/moveit_simple_controller_manager/share/moveit_simple_controller_manager/: local_setup.sh  package.sh
install/optimization/lib/optimization/: optimization
install/optimization/share/optimization/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/spot_arm_moveit2_config/share/spot_arm_moveit2_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spot_bringup/share/spot_bringup/: package.ps1  package.sh
install/spot_control/share/spot_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spot_control/share/spot_control/config/: twist_mux.yaml
install/spot_control/share/spot_control/launch/: teleop.launch.py
install/spot_description/share/spot_description/: package.sh
install/spot_driver/lib/spot_driver/: driver
install/spot_driver/share/spot_driver/: package.dsv  package.ps1  package.sh  package.xml
install/spot_driver/share/spot_driver/config/: spot_ros.yaml
install/spot_driver/share/spot_driver/launch/: driver.launch.py
install/spot_gazebo/share/spot_gazebo/: local_setup.sh  package.sh
install/spot_manipulation_driver/lib/spot_manipulation_driver/: follow_joint_trajectory_action_server
install/spot_manipulation_driver/share/spot_manipulation_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/spot_msgs/include/spot_msgs/msg/: dock_state.h  (+1 more)
install/spot_msgs/share/spot_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/spot_navigation/share/spot_navigation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spot_navigation/share/spot_navigation/cmake/: spot_navigationConfig.cmake
install/spot_navigation/share/spot_navigation/config/: lidar.yaml  lidar_slam.yaml  lidar_with_map.yaml  octomap_params.yaml  spot.yaml
install/spot_navigation/share/spot_navigation/launch/: amcl.launch.py  navigation.launch.py  navigation_suite.launch.py  octomap.launch.py  slam.launch.py
install/spot_navigation/share/spot_navigation/map/: ahg.pgm  ahg.yaml
install/spot_navigation/share/spot_navigation/rviz/: tb3_navigation2.rviz
install/spot_ros/share/spot_ros/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/spot_viz/share/spot_viz/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/optimization/: CMakeLists.txt  package.xml
src/optimization/src/: optimization.cpp  optimizationpy.py
(+219 files in other folders)
