<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_control</name>
  <version>1.0.0</version>
  <description>Controllers for Boston Dynamics Spot quadruped</description>
  
  <maintainer email="blakeanderson@utexas.edu">Blake Anderson</maintainer>
  <author email="blakeanderson@utexas.edu">Blake Anderson</author>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
