<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_driver</name>
  <version>2.0.0</version>
  <description>ROS driver for the Boston Dynamics Spot quadruped.</description>

  <maintainer email="blakeanderson@utexas.edu">Blake Anderson</maintainer>
  <author email="blakeanderson@utexas.edu">Blake Anderson</author>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>Proprietary</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>spot_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
