<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_navigation</name>
  <version>1.0.0</version>
  <description>
    Navigation functionality for Boston Dynamics Spot quadruped
  </description>

  <maintainer email="blakeanderson@utexas.edu">Blake Anderson</maintainer>
  <author email="blakeanderson@utexas.edu">Blake Anderson</author>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
